# matter

./: CHANGELOG.md  LICENSE  README.md  matter.cabal
app/: Main.hs  MatterHighlight.hs
doc/: postulates.md
examples/: foo.matr  package.json.matr
src/Language/Matter/: Html.hs  Interpreter.hs  Parser.hs  SyntaxTree.hs  Tokenizer.hs
src/Language/Matter/SyntaxTree/: Pretty.hs
src/Language/Matter/Tokenizer/: Counting.hs  Debug.hs  Pretty.hs  SetChar.hs  StateMachine.hs
test/: Main.hs
test/Language/Matter/Parser/: Tests.hs
test/Language/Matter/Tokenizer/: Tests.hs
testlib/Language/Matter/SyntaxTree/: Generator.hs
