cabal-version:      3.0
name:               matter
version:            0.1.0.0
synopsis:           The Matter language
description:        Library for the Matter language
license:            BSD-3-Clause
license-file:       LICENSE
author:             Nicolas Frisby
maintainer:         nicolas.frisby@gmail.com
copyright:          2026 Nicolas Frisby
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options:
        -Wall
        -Wcompat
        -Wincomplete-uni-patterns
        -Wincomplete-record-updates
        -Wpartial-fields
        -Widentities
        -Wredundant-constraints
        -Wmissing-export-lists
        -Wunused-packages
        -Wno-unticked-promoted-constructors

library
    import:           warnings
    exposed-modules:
        Language.Matter.Parser
        Language.Matter.SyntaxTree
        Language.Matter.Tokenizer
        Language.Matter.Tokenizer.Counting
        Language.Matter.Tokenizer.Debug
        Language.Matter.Tokenizer.SetChar
        Language.Matter.Tokenizer.StateMachine
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.21.0.0,
        recursion-schemes,
        text,
    hs-source-dirs:   src
    default-language: Haskell2010

library matter-testlib
    import:           warnings
    exposed-modules:
        Language.Matter.SyntaxTree.Generator
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.21.0.0,
        combinat,
        matter,
        QuickCheck,
        splitmix,
    hs-source-dirs:   testlib
    default-language: Haskell2010

test-suite matter-test
    import:           warnings
    default-language: Haskell2010
    other-modules:
        Language.Matter.Parser.Tests
        Language.Matter.Tokenizer.Tests
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.21.0.0,
        QuickCheck,
        matter,
        matter-testlib,
        text,
